vbnc/vbnc/tests/Errors/30311-7.vb
Class T
    Const M_Char_Char As Char = 12.0!
End Class